--- a/12.7 markdown/캐시.md
+++ b/12.7 markdown/캐시.md
@@ -5,4 +5,4 @@
 - 메인 캐시와 리필 패스 사이에 위치
 
 - CPU 캐시에서 빠져나간 블록 유지
-![Victim_Cache](C:\Users\user\Documents\2018920013-markdown\12.7 markdown\Victim_Cache.png)
+<img src="12.7 markdown/Victim_Cache.png" width="25%" height="25%"/>
