--- a/12.7 markdown/캐시.md
+++ b/12.7 markdown/캐시.md
@@ -5,4 +5,4 @@
 - 메인 캐시와 리필 패스 사이에 위치
 
 - CPU 캐시에서 빠져나간 블록 유지
-<img src="12.7 markdown/Victim_Cache.png" width="100%" height="100%"/>
+<img src="Image/Victim_Cache.png" width="80%" height="60%"/>
